update before/after to have no width to fix Safari overflow issue

--- a/src/components/globalStyles.scss
+++ b/src/components/globalStyles.scss
@@ -86,6 +86,7 @@ p {
     content: "";
     display: table;
     clear: both;
+    width: 0px;
   }
 
   [class*="col-"] {
